feat: hardcode new model ids for demo
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/helm-chart-for-wisdom/wisdom/templates/wisdom.yaml
+++ b/helm-chart-for-wisdom/wisdom/templates/wisdom.yaml
@@ -1,7 +1,8 @@
-apiVersion: console.openshift.io/v1alpha2
+apiVersion: console.openshift.io/v1alpha3
 kind: Wisdom
 metadata:
   name: wisdom-config
 spec:
+  hideAdvancedTab: {{ .Values.hideAdvancedTab }}
   backends:
 {{ toYaml .Values.backends | indent 4 }}
