--- a/helm-chart-for-wisdom/wisdom/crds/wisdom-crd.yaml
+++ b/helm-chart-for-wisdom/wisdom/crds/wisdom-crd.yaml
@@ -8,11 +8,48 @@ spec:
   group: console.openshift.io
   # list of versions supported by this CustomResourceDefinition
   versions:
-    - name: v1alpha2
+    - name: v1alpha3
       # Each version can be enabled/disabled by Served flag.
       served: true
       # One and only one version must be marked as the storage version.
       storage: true
+      schema:
+        openAPIV3Schema:
+          type: object
+          properties:
+            spec:
+              type: object
+              required:
+                - backends
+              properties:
+                hideAdvancedTab:
+                  type: boolean
+                  description: 'hides the advanced tab in the Wisdom Assistant sidebar'
+                  default: false
+                backends:
+                  type: array
+                  items:
+                    type: object
+                    required:
+                      - name
+                      - discoveryEndpoint
+                    properties:
+                      name:
+                        type: string
+                      discoveryEndpoint:
+                        type: string
+                      auth:
+                        type: object
+                        required:
+                          - secretName
+                        properties:
+                          secretName:
+                            type: string
+    - name: v1alpha2
+      # Each version can be enabled/disabled by Served flag.
+      served: true
+      # One and only one version must be marked as the storage version.
+      storage: false
       schema:
         openAPIV3Schema:
           type: object
@@ -43,7 +80,7 @@ spec:
                             type: string
     - name: v1alpha1
       # Each version can be enabled/disabled by Served flag.
-      served: true
+      served: false
       # One and only one version must be marked as the storage version.
       storage: false
       schema:
