--- a/k8s-yamls-for-old-ui/wisdom-for-old-ui.yaml
+++ b/k8s-yamls-for-old-ui/wisdom-for-old-ui.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: wisdom-api
+  namespace: openshift-config
 stringData:
-  email: 'xxxx'
-  apiKey: 'xxxx'
+  email: 'Harikrishnan.Balagopal@ibm.com'
+  apiKey: 'sk-8678c137a1581b4c8df5b139967b5845f06af95086bd717e'
