chore: rename wisdom to assistant because of the name change to lightspeed
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/frontend/packages/console-app/console-extensions.json
+++ b/frontend/packages/console-app/console-extensions.json
@@ -24,11 +24,11 @@
   {
     "type": "console.flag/model",
     "properties": {
-      "flag": "v1alpha3WISDOM",
+      "flag": "v1alpha4ASSISTANT",
       "model": {
         "group": "console.openshift.io",
-        "version": "v1alpha3",
-        "kind": "Wisdom"
+        "version": "v1alpha4",
+        "kind": "Assistant"
       }
     }
   },
