--- a/k8s-yamls-for-old-ui/assistant-secret-for-old-ui.yaml
+++ b/k8s-yamls-for-old-ui/assistant-secret-for-old-ui.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: wisdom-api
+  name: assistant-api-secret
   namespace: openshift-config
 stringData:
   email: 'Harikrishnan.Balagopal@ibm.com'
