fix: remove endpoint and deployment specific values
Signed-off-by: Harikrishnan Balagopal <harikrishmenon@gmail.com>

--- a/helm-chart-for-assistant/assistant/values.yaml
+++ b/helm-chart-for-assistant/assistant/values.yaml
@@ -5,6 +5,6 @@ backends:
     auth:
       secretName: assistant-localhost-secret
   - name: Red Hat Assistant
-    discoveryEndpoint: https://rhassistant-rhassistant.apps.os1.zurich.ibm.com/api/v1/discovery
+    discoveryEndpoint: https://example.com/api/v1/discovery
     auth:
       secretName: assistant-rhassistant-secret
