--- a/k8s-yamls-for-old-ui/assistant-secret-for-old-ui.yaml
+++ b/k8s-yamls-for-old-ui/assistant-secret-for-old-ui.yaml
@@ -4,5 +4,5 @@ metadata:
   name: assistant-api-secret
   namespace: openshift-config
 stringData:
-  email: 'Harikrishnan.Balagopal@ibm.com'
-  apiKey: 'sk-8678c137a1581b4c8df5b139967b5845f06af95086bd717e'
+  email: ''
+  apiKey: ''
