--- a/helm-chart-for-assistant/assistant/templates/assistant-for-rhassistant-secret.yaml
+++ b/helm-chart-for-assistant/assistant/templates/assistant-for-rhassistant-secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: assistant-rhassistant-secret
 stringData:
-  assistant-email: 'Harikrishnan.Balagopal@ibm.com'
-  assistant-token: 'sk-8678c137a1581b4c8df5b139967b5845f06af95086bd717e'
+  assistant-email: ''
+  assistant-token: ''
